crates/lattice-service/tests/ui/service_context_placement_drain.stderr
error[E0599]: no method named `drain_instance` found for struct `Arc<dyn DynPlacementStore>` in the current scope
 --> tests/ui/service_context_placement_drain.rs:9:10
  |
8 |       let _ = placement
  |  _____________-
9 | |         .drain_instance(ServiceKind::new("World"), InstanceId::new("world-a"))
  | |_________-^^^^^^^^^^^^^^
  |
help: there is a method `get_instance` with a similar name, but with different arguments
 --> src/framework/placement.rs
  |
  | /     async fn get_instance(
  | |         &self,
  | |         instance_id: &InstanceId,
  | |     ) -> Result<Option<InstanceRecord>, PlacementError>;
  | |________________________________________________________^
